added generator content and linked index page

--- a/docs/blocks/generators/generators.mdx
+++ b/docs/blocks/generators/generators.mdx
@@ -7,22 +7,22 @@ sidebar_position: 2
 
 Generators produce energy to power machines. For an explanation of how generators interact with power, read [general information about energy](/energy/).
 
-- \<mcitem\>techreborn:generator\</mcitem\>
-- \<mcitem\>techreborn:diesel_generator\</mcitem\>
-- \<mcitem\>techreborn:gas_turbine\</mcitem\>
-- \<mcitem\>techreborn:plasma_generator\</mcitem\>
-- \<mcitem\>techreborn:semifluid_generator\</mcitem\>
-- \<mcitem\>techreborn:thermal_generator\</mcitem\>
-- \<mcitem\>techreborn:fusion_control_computer\</mcitem\>
-- **[passive_generators](/energy/generators/passive_generators)**
-  - **[solar_panels](/energy/generators/solar_panels)**
-    - \<mcitem\>techreborn:basic_solar_panel\</mcitem\>
-    - \<mcitem\>techreborn:advanced_solar_panel\</mcitem\>
-    - \<mcitem\>techreborn:industrial_solar_panel\</mcitem\>
-    - \<mcitem\>techreborn:ultimate_solar_panel\</mcitem\>
-    - \<mcitem\>techreborn:quantum_solar_panel\</mcitem\>
-    - \<mcitem\>techreborn:creative_solar_panel\</mcitem\>
-  - \<mcitem\>techreborn:water_mill\</mcitem\>
-  - \<mcitem\>techreborn:wind_mill\</mcitem\>
-  - \<mcitem\>techreborn:dragon_egg_energy_siphon\</mcitem\>
-  - \<mcitem\>techreborn:lightning_rod\</mcitem\>
+- <McItem slug="techreborn:generator"/>
+- <McItem slug="techreborn:diesel_generator"/>
+- <McItem slug="techreborn:gas_turbine"/>
+- <McItem slug="techreborn:plasma_generator"/>
+- <McItem slug="techreborn:semifluid_generator"/>
+- <McItem slug="techreborn:thermal_generator"/>
+- <McItem slug="techreborn:fusion_control_computer"/>
+- **[Passive Generator](/docs/blocks/generators/passive_generators)**
+  - **[Solar Panels](/docs/blocks/generators/solar_panels)**
+    - <McItem slug="techreborn:basic_solar_panel"/>
+    - <McItem slug="techreborn:advanced_solar_panel"/>
+    - <McItem slug="techreborn:industrial_solar_panel"/>
+    - <McItem slug="techreborn:ultimate_solar_panel"/>
+    - <McItem slug="techreborn:quantum_solar_panel"/>
+    - <McItem slug="techreborn:creative_solar_panel"/>
+  - <McItem slug="techreborn:water_mill"/>
+  - <McItem slug="techreborn:wind_mill"/>
+  - <McItem slug="techreborn:dragon_egg_energy_siphon"/>
+  - <McItem slug="techreborn:lightning_rod"/>
