doing the cables section and listing

--- a/docs/blocks/cables/cables.mdx
+++ b/docs/blocks/cables/cables.mdx
@@ -7,16 +7,16 @@ sidebar_position: 2
 
 | Name                                                                                                    | Tier     | Input & Output Rate |
 | ------------------------------------------------------------------------------------------------------- | -------- | ------------------- |
-| \<mcitem\>techreborn:tin_cable\</mcitem\>                                                               | Low      | 32 E/t              |
-| \<mcitem\>techreborn:copper_cable\</mcitem\> and \<mcitem\>techreborn:insulated_copper_cable\</mcitem\> | Medium   | 128 E/t             |
-| \<mcitem\>techreborn:gold_cable\</mcitem\> and \<mcitem\>techreborn:insulated \_gold_cable\</mcitem\>   | High     | 512 E/t             |
-| \<mcitem\>techreborn:HV_cable\</mcitem\> and \<mcitem\>techreborn:insulated_HV_cable\</mcitem\>         | Extreme  | 2 kE/t              |
-| \<mcitem\>techreborn:GlassFiber_Cable\</mcitem\>                                                        | Insane   | 8.1 kE/t            |
-| \<mcitem\>techreborn:superconductor_cable\</mcitem\>                                                    | Infinite | 5.36 ME/t           |
+| <McItem slug="techreborn:tin_cable"/>                                                               | Low      | 32 E/t              |
+| <McItem slug="techreborn:copper_cable"/> and <McItem slug="techreborn:insulated_copper_cable"/> | Medium   | 128 E/t             |
+| <McItem slug="techreborn:gold_cable"/> and <McItem slug="techreborn:insulated_gold_cable"/>   | High     | 512 E/t             |
+| <McItem slug="techreborn:hv_cable"/> and <McItem slug="techreborn:insulated_hv_cable"/>         | Extreme  | 2 kE/t              |
+| <McItem slug="techreborn:glassfiber_cable"/>                                                        | Insane   | 8.1 kE/t            |
+| <McItem slug="techreborn:superconductor_cable"/>                                                    | Infinite | 5.36 ME/t           |
 
 ## Usage Notes
 
-- Copper, Gold, and HV cables can be insulated using \<mcitem\>techreborn:rubber\</mcitem\>. Uninsulated cables can cause damaging shocks (and use energy in the process)!
-- There is no insulated version of the \<mcitem\>techreborn:GlassFiber_Cable\</mcitem\> because this cable will not shock you.
-- There is no insulated version of the \<mcitem\>techreborn:tin_cable\</mcitem\>, but it will still shock you.
-- Cables can be dismantled instantly by shift-right-clicking with the \<mcitem\>techreborn:wrench\</mcitem\>
+- Copper, Gold, and HV cables can be insulated using <McItem slug="techreborn:rubber"/>. Uninsulated cables can cause damaging shocks (and use energy in the process)!
+- There is no insulated version of the <McItem slug="techreborn:GlassFiber_Cable"/> because this cable will not shock you.
+- There is no insulated version of the <McItem slug="techreborn:tin_cable"/>, but it will still shock you.
+- Cables can be dismantled instantly by shift-right-clicking with the <McItem slug="techreborn:wrench"/>
