a little prettying up

--- a/docs/items/fluids/beryllium_cell.mdx
+++ b/docs/items/fluids/beryllium_cell.mdx
@@ -14,8 +14,8 @@ The **Beryllium Cell** is a fluid cell added by TechReborn. You can get by using
 29x\<mcitem\>techreborn:emerald_dust\</mcitem\> + 18x\<mcitem\>techreborn:empty_cell\</mcitem\> -\> 2x\<mcitem\>techreborn:aluminium_dust\</mcitem\> + 3x\<mcitem\>techreborn:beryllium_cell\</mcitem\> + 6x\<mcitem\>techreborn:silicon_cell\</mcitem\> + 9x\<mcitem\>techreborn:compressed_air_cell\</mcitem\>\
 16x\<mcitem\>techreborn:ender_pearl_dust\</mcitem\> + 16x\<mcitem\>techreborn:empty_cell\</mcitem\> -\> 5x\<mcitem\>techreborn:nitrogen_cell\</mcitem\> + \<mcitem\>techreborn:beryllium_cell\</mcitem\> + 4x\<mcitem\>techreborn:potassium_cell\</mcitem\> + 6x\<mcitem\>techreborn:chlorite_cell\</mcitem\>\
 
-\<mcitem\>techreborn:fluid_replicator\</mcitem\> recipe:\
-10x\<mcitem\>techreborn:UU_matter\</mcitem\> -\> \<mcitem\>techreborn:beryllium_cell\</mcitem\>
+<McItem slug="techreborn:fluid_replicator"/> recipe:\
+10x<McItem slug="techreborn:UU_matter"/> -\> <McItem slug="techreborn:beryllium_cell"/>
 
 ## Usage
 
@@ -24,8 +24,8 @@ The **Beryllium Cell** is a fluid cell added by TechReborn. You can get by using
 <CraftingTable recipe="input air techreborn:neutron_reflector air input techreborn:neutron_reflector techreborn:beryllium_cell techreborn:neutron_reflector input air techreborn:neutron_reflector air output techreborn:thick_neutron_reflector" />
 
 \
-**Beryllium Cell** used in the following \<mcitem\>techreborn:fusion_reactor\</mcitem\> recipe:\
-\<mcitem\>techreborn:beryllium_cell\</mcitem\> + \<mcitem\>techreborn:wolframium_cell\</mcitem\> -\> \<mcitem\>techreborn:platinum_dust\</mcitem\>
+**Beryllium Cell** used in the following <McItem slug="techreborn:fusion_reactor"/> recipe:\
+<McItem slug="techreborn:beryllium_cell"/> + <McItem slug="techreborn:wolframium_cell"/> -\> <McItem slug="techreborn:platinum_dust"/>
 
 ## History
 
